spacing fixed

--- a/frontend/src/pages/home/components/pending-requests-inbox/pending-requests-inbox.module.scss
+++ b/frontend/src/pages/home/components/pending-requests-inbox/pending-requests-inbox.module.scss
@@ -28,7 +28,7 @@ $item-card-width: 360px;
     }
 }
 .item-card {
-    width: 100% !important;
+    width: 100%;
     height: 100%;
     padding: globals.$spacing-m globals.$spacing-l;
     padding-right: 0;
@@ -55,10 +55,6 @@ $item-card-width: 360px;
     justify-content: center;
 }
 
-.end-actions {
-    padding-bottom: globals.$spacing-m;
-}
-
 .requests-info {
     padding-left: globals.$spacing-s;
     padding-bottom: globals.$spacing-xs;
@@ -74,11 +70,11 @@ $item-card-width: 360px;
 }
 
 .resolve-button {
-    margin-top: 0 !important;
-    padding-top: 0 !important;
+    margin: 0;
+    padding: 0;
     height: auto !important;
 }
 
-.type-indicator {
-    margin-right: globals.$spacing-regular;
+.buttons {
+    width: globals.$button-width;
 }
