--- a/frontend/src/pages/home/home.module.scss
+++ b/frontend/src/pages/home/home.module.scss
@@ -11,5 +11,5 @@
     flex: 0.6;
     padding: globals.$container-padding-large;
     padding-bottom: 0;
-    padding-top: globals.$spacing-m;
+    padding-top: globals.$spacing-regular;
 }
